:sparkles: feat: 테스트케이스 조회 response 암호화 - AES256으로 암호화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,5 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     database: mysql
     hibernate.ddl-auto: validate
+
+secretKey : 1234
